Added basic version of our map with corona deaths of germany

--- a/index.html
+++ b/index.html
@@ -5,15 +5,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Corona Virus Info Website</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+    crossorigin="" />
   <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
   <div class="container">
-
+    <!-- <div class="skewed"></div> -->
     <h1>Corona Info Website</h1>
+    <div id="mapid"></div>
   </div>
 </body>
+<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+  integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+  crossorigin=""></script>
 <script src="script.js"></script>
+<script>
+  const removeElements = (elms) => elms.forEach((el) => el.remove());
+  removeElements(document.querySelectorAll('.leaflet-control-attribution'));
+  document.getElementById('mapid').style.cursor = 'crosshair !important';
+</script>
+
 
 </html>
