--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
         <div class="right-upper-container">
         <img class="right-image" src="/images/high-risk.jpg" alt="infographic about how to reduce risks">
         </div>
-        <div class="right-lower-container"></div>
+        <div class="right-lower-container">
+          <figure class="highcharts-figure">
+            <div id="donut-container"></div>
+            <p class="highcharts-description">
+              A variation of a 3D pie chart with an inner radius added.
+              These charts are often referred to as donut charts.
+            </p>
+          </figure>
+        </div>
       </div>
     </div>
     
@@ -44,9 +52,53 @@
   crossorigin=""></script>
 <script src="script.js"></script>
 <script>
+  document.addEventListener('DOMContentLoaded', function () {
+    var myChart =  Highcharts.chart('donut-container', {
+  chart: {
+    type: 'pie',
+    options3d: {
+      enabled: true,
+      alpha: 45
+    }
+  },
+  title: {
+    text: 'Contents of Highsoft\'s weekly fruit delivery'
+  },
+  subtitle: {
+    text: '3D donut in Highcharts'
+  },
+  plotOptions: {
+    pie: {
+      innerSize: 100,
+      depth: 45
+    }
+  },
+  series: [{
+    name: 'Delivered amount',
+    data: [
+      ['Bananas', 8],
+      ['Kiwi', 3],
+      ['Mixed nuts', 1],
+      ['Oranges', 6],
+      ['Apples', 8],
+      ['Pears', 4],
+      ['Clementines', 4],
+      ['Reddish (bag)', 1],
+      ['Grapes (bunch)', 1]
+    ]
+  }]
+});
+  });
+</script>
+
+<script>
   const removeElements = (elms) => elms.forEach((el) => el.remove());
   removeElements(document.querySelectorAll('.leaflet-control-attribution'));
   document.getElementById('mapid').style.cursor = 'crosshair !important';
 </script>
-
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/highcharts-3d.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/export-data.js"></script>
+<script src="https://code.highcharts.com/modules/accessibility.js"></script>
 </html>
