--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
           <figure class="highcharts-figure">
             <div id="donut-container"></div>
             <p class="highcharts-description">
-              A variation of a 3D pie chart with an inner radius added.
-              These charts are often referred to as donut charts.
+              Demografische Daten und Symptome/Manifestationen COVID-19-Erkrankter aus Deutschland (Stand 29.04.2020)
             </p>
           </figure>
         </div>
@@ -62,10 +61,10 @@
     }
   },
   title: {
-    text: 'Contents of Highsoft\'s weekly fruit delivery'
+    text: 'Demografische Daten'
   },
   subtitle: {
-    text: '3D donut in Highcharts'
+    text: 'Altersverteilung'
   },
   plotOptions: {
     pie: {
@@ -74,18 +73,15 @@
     }
   },
   series: [{
-    name: 'Delivered amount',
+    name: 'Altersverteilung in %',
     data: [
-      ['Bananas', 8],
-      ['Kiwi', 3],
-      ['Mixed nuts', 1],
-      ['Oranges', 6],
-      ['Apples', 8],
-      ['Pears', 4],
-      ['Clementines', 4],
-      ['Reddish (bag)', 1],
-      ['Grapes (bunch)', 1]
-    ]
+      ['unter 10 Jahre', 1.7],
+      ['10 - 19 Jahre', 4,2],
+      ['20 - 49 Jahre', 43],
+      ['50 - 69 Jahre', 32],
+      ['70 - 89 Jahre', 16],
+      ['über 90 Jahre', 2.8],
+        ]
   }]
 });
   });
