--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     }
   },
   title: {
-    text: 'Demografische Daten'
+    text: 'COVID-19 Erkrankte'
   },
   subtitle: {
     text: 'Altersverteilung'
