--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/tailwind.css" />
-  <link rel="icon" type="image/png" href="../images/corona-favicon.png">
+  <link rel="icon" type="image/png" href="/../images/corona-favicon.png">
   <title>Covid-19 in Deutschland - Erfahre mehr!</title>
 </head>
 <body>
