Risk group image added

--- a/info.html
+++ b/info.html
@@ -29,7 +29,7 @@
       <div id="mapid"></div>
       <div class="right-container">
         <div class="right-upper-container">
-        <img class="right-image" src="/images/high-risk.jpg" alt="infographic about how to reduce risks">
+        <img class="right-image" src="/images/risk-group-stairs.png" alt="infographic about how to reduce risks">
         </div>
         <div class="right-lower-container"></div>
       </div>
