--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/tailwind.css" />
   <link rel="icon" type="image/png" href="/../images/corona-favicon.png">
-  <title>Covid-19 in Deutschland - Erfahre mehr!</title>
+  <title>COVID-19 in Deutschland - Erfahre mehr!</title>
 </head>
 <body>
   <div class="relative bg-dark overflow-hidden h-screen">
@@ -45,7 +45,7 @@
             <div class="mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
               <div class="rounded-md shadow">
                 <a href="https://quiz.corona.saschamajewsky.de" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-black bg-secondary hover:bg-secondarylighter focus:outline-none focus:shadow-outline transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10">
-                  Los geht's!
+                  Mehr erfahren!
                 </a>
               </div>
             </div>
