reduce risk image changed on website

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- <div class="skewed"></div> -->
     <div class="element-container">
       <div class="left-container">
-        <img class="left-image" src="/images/reduce-risk.jpeg" alt="infographic about how to reduce risks">
+        <img class="left-image" src="/images/reduce-risk.png" alt="infographic about how to reduce risks">
       </div>
       <div id="mapid"></div>
       <div class="right-container">
