--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
               <span class="text-secondary">Informationen</span>
             </h2>
             <p class="mt-3 text-base text-white sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-              Die Medien überfluten uns mit Informationen. Doch wie hoch war unser Risiko wirklich? Wann war die Gefahr am höchsten? Erweitere dein Wissen im Quiz und den Informationsgrafiken.
+              Die Medien überfluten uns mit Informationen. Doch wie hoch war unser Risiko wirklich? Wann war die Gefahr am höchsten? Erweitere dein Wissen im Quiz und mit Informationsgrafiken.
             </p>
             <div class="mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
               <div class="rounded-md shadow">
