Refactored donut-chart data

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <figure class="highcharts-figure">
             <div id="donut-container"></div>
             <p class="highcharts-description">
-              Demografische Daten und Symptome/Manifestationen COVID-19-Erkrankter aus Deutschland (Stand 21.05.2020)
+              Demografische Daten und Symptome/Manifestationen COVID-19-Erkrankter aus Deutschland (RKI Stand 14.05.2020)
             </p>
           </figure>
         </div>
@@ -74,8 +74,8 @@
   },
   series: [{
     name: 'Altersverteilung in %',
-    data:  [['unter 10 Jahre', 1.7],
-      ['10 - 19 Jahre', 4,2],
+    data:  [['unter 10 Jahre', 1.9],
+      ['10 - 19 Jahre', 4.3],
       ['20 - 49 Jahre', 43],
       ['50 - 69 Jahre', 32],
       ['70 - 89 Jahre', 16],
