--- a/index.html
+++ b/index.html
@@ -27,13 +27,10 @@
     <!-- <div class="skewed"></div> -->
     <div class="element-container">
       <div class="left-container">
-        <img class="left-image" src="/images/reduce-risk.png" alt="infographic about how to reduce risks">
+        <img class="left-image" src="/images/risk-group-stairs.png" alt="infographic about how to reduce risks">
       </div>
       <div id="mapid"></div>
       <div class="right-container">
-        <div class="right-upper-container">
-        <img class="right-image" src="/images/risk-group-stairs.png" alt="infographic about how to reduce risks">
-        </div>
         <div class="right-lower-container">
           <figure class="highcharts-figure">
             <div id="donut-container"></div>
@@ -44,8 +41,11 @@
         </div>
       </div>
     </div>
-    
+    <div class="right-upper-container">
+      <img class="right-image" src="/images/reduce-risk.png" alt="infographic about how to reduce risks">
+      </div>
   </div>
+ 
 </div>
 </body>
 
@@ -55,17 +55,32 @@
     var myChart =  Highcharts.chart('donut-container', {
   chart: {
     type: 'pie',
+    backgroundColor: 'transparent',
     options3d: {
       enabled: true,
-      alpha: 45
+      alpha: 45,
     }
   },
   title: {
-    text: 'COVID-19 Erkrankte'
+    text: 'COVID-19 Erkrankte',
+    style: {
+        fontFamily: 'Roboto',
+        color: "white"
+    }
   },
   subtitle: {
-    text: 'Altersverteilung'
+    text: 'Altersverteilung',
+    style: {
+        fontFamily: 'Roboto',
+        color: "white"
+    }
   },
+  legend: {
+        itemStyle: {
+            color: 'red',
+            fontWeight: 'bold'
+        }
+    },
   plotOptions: {
     pie: {
       innerSize: 100,
@@ -74,6 +89,12 @@
   },
   series: [{
     name: 'Altersverteilung in %',
+    dataLabels: {
+                style: {
+                    fontSize: 20,
+                    color: 'white'
+                }
+            },
     data:  [['unter 10 Jahre', 1.9],
       ['10 - 19 Jahre', 4.3],
       ['20 - 49 Jahre', 43],
@@ -81,7 +102,7 @@
       ['70 - 89 Jahre', 16],
       ['über 90 Jahre', 2.8],
       ]
-  }]
+  }],
 });
   });
 </script>
