--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <figure class="highcharts-figure">
             <div id="donut-container"></div>
             <p class="highcharts-description">
-              Demografische Daten und Symptome/Manifestationen COVID-19-Erkrankter aus Deutschland (RKI Stand 14.05.2020)
+              Demografische Daten und Symptome/Manifestationen COVID-19-Erkrankter aus Deutschland (Stand: RKI 14.05.2020)
             </p>
           </figure>
         </div>
