Updated labels for pie chart

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                 }
             },
     data:  [['unter 10 Jahre', 1.9],
-      ['10 - 19 Jahre', 4.3],
-      ['20 - 49 Jahre', 43],
-      ['50 - 69 Jahre', 32],
-      ['70 - 89 Jahre', 16],
+      ['10 bis 19 Jahre', 4.3],
+      ['20 bis 49 Jahre', 43],
+      ['50 bis 69 Jahre', 32],
+      ['70 bis 89 Jahre', 16],
       ['über 90 Jahre', 2.8],
       ]
   }],
