--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
     <!-- <div class="skewed"></div> -->
     <div class="element-container">
       <div class="left-container">
-        <img class="left-image" src="/images/risk-group-stairs.png" alt="infographic about how to reduce risks">
+        <!-- <img class="left-image" src="/images/risk-group-stairs.png" alt="infographic about how to reduce risks"> -->
+        <figure class="highcharts-figure">
+          <div id="wordcloud"></div>
+          <p class="highcharts-description">
+            Word clouds are used to visualize how often each word in a
+            text occurs. This example uses an excerpt from the popular
+            "Lorem Ipsum" text. Words that appear often will appear
+            larger.
+          </p>
+        </figure>
       </div>
       <div id="mapid"></div>
       <div class="right-container">
@@ -96,7 +105,8 @@
     dataLabels: {
                 style: {
                     fontSize: 20,
-                    color: 'white'
+                    color: 'white',
+                    fontFamily: 'Roboto',
                 }
             },
     data:  [['unter 10 Jahre', 1.9],
@@ -108,7 +118,49 @@
       ]
   }],
 });
-  });
+ 
+
+  // Word CLoud
+  var text = 'Test Test Test Anderes Anderes Alleine einzig artig bla';
+var lines = text.split(/[,\. ]+/g),
+  data = Highcharts.reduce(lines, function (arr, word) {
+    var obj = Highcharts.find(arr, function (obj) {
+      return obj.name === word;
+    });
+    if (obj) {
+      obj.weight += 1;
+    } else {
+      obj = {
+        name: word,
+        weight: 1
+      };
+      arr.push(obj);
+    }
+    return arr;
+  }, []);
+
+Highcharts.chart('wordcloud', {
+  colors: ['#2f7ed8', '#0d233a', '#8bbc21', '#910000', '#1aadce',
+        '#492970', '#f28f43', '#77a1e5', '#c42525', '#a6c96a'],
+  accessibility: {
+    screenReaderSection: {
+      beforeChartFormat: '<h5>{chartTitle}</h5>' +
+        '<div>{chartSubtitle}</div>' +
+        '<div>{chartLongdesc}</div>' +
+        '<div>{viewTableButton}</div>'
+    }
+  },
+  series: [{
+    type: 'wordcloud',
+    data: data,
+    name: 'Occurrences',
+  }],
+  title: {
+    text: 'Wordcloud of Lorem Ipsum'
+  }
+});
+});
+
 </script>
 <script>
   const removeElements = (elms) => elms.forEach((el) => el.remove());
@@ -120,5 +172,9 @@
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
 <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+<script src="https://code.highcharts.com/modules/wordcloud.js"></script>
+
+<div id="container"></div>
+<div id="container2"></div>
 
 </html>
