Refactored UI chart

--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
         <!-- <img class="left-image" src="/images/risk-group-stairs.png" alt="infographic about how to reduce risks"> -->
         <figure class="highcharts-figure secondchart">
           <div id="wordcloud"></div>
-          <p class="highcharts-description">
-            Die Größe der Begriffe hängt von der von uns wahrgenommenen Erwähnung in den Nachrichten ab.
-          </p>
-          <figure class="highcharts-figure">
+          <figure class="highcharts-figure down">
             <div id="donut-container"></div>
             <p class="highcharts-description">
               Demografische Daten und Symptome/Manifestationen COVID-19-Erkrankter aus Deutschland (Stand: RKI 14.05.2020)
@@ -158,7 +155,7 @@ Highcharts.chart('wordcloud', {
     style: {
         fontFamily: 'Roboto',
         color: "white",
-        fontSize: '2.1rem' 
+        fontSize: '2.1rem',
     }
   },
   subtitle: {
